[package]
name = "async-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.28", features = ["thread-pool"]}
rand = "0.8"
tokio = {version = "1.28.0", features = ["sync", "time", "macros", "rt-multi-thread"]}
